--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "xel-webservices/xel-xwp-plugin",
-    "version": 0.5,
+    "version": "0.5",
     "description": "Xel WordPress plugin",
     "type": "wordpress-plugin",
     "minimum-stability": "stable",
