--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,18 @@
 {
     "name": "xel-webservices/xel-xwp-plugin",
-    "version": "1.5",
+    "version": "1.7",
     "description": "Xel WordPress MU plugin",
     "minimum-stability": "stable",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@gitlab.xel.nl:xel-webservices/xel-commons.git"
+        }
+    ],
+    "require": {
+        "php": "~7.1.0",
+        "xel-webservices/xel-commons": "~1.9.0"
+    },
     "autoload": {
         "psr-4": {"Xel\\XWP\\": "src/"}
     }
